# patchdog

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  action.yml  build.sh  config.yaml  patchdog_config.yaml  run.sh  start.sh
.cargo/: config.toml
.github/: update.yml
.github/workflows/: action.yml  build_release.yml  dump.yml  on_comment.yml  patchdog.yml  patchdog_issue_comment.yml  run_test.yml  rust.yml  test.yml
action/: run.sh
crates/ai_interactions/: Cargo.toml
crates/ai_interactions/src/: lib.rs  parse_json.rs
crates/chatgpt/: Cargo.toml
crates/chatgpt/src/: lib.rs
crates/filesystem_parsing/: Cargo.toml
crates/filesystem_parsing/src/: git_ops.rs  lib.rs
crates/gemini/: Cargo.toml
crates/gemini/src/: bot.rs  gemini.rs  lib.rs  request_preparation.rs
crates/git_parsing/: Cargo.toml
crates/git_parsing/src/: lib.rs  patch_parse.rs
crates/openai/: Cargo.toml
crates/openai/src/: lib.rs
crates/patchdoc/: Cargo.toml
crates/patchdoc/src/: lib.rs  main.rs
crates/patchdog/: Cargo.toml
crates/patchdog/src/: analyzer.rs  binding.rs  cli.rs  lib.rs  main.rs  tests.rs
crates/rust_parsing/: Cargo.toml
crates/rust_parsing/src/: error.rs  file_parsing.rs  lib.rs  object_parsing.rs  object_range.rs  rust_parser.rs  rustc_parsing.rs
tests/: data.rs  lib.rs  request.json  res.json  response.json  response_regex.json
