[workspace]
resolver = "2"
default-members = ["crates/patchdog"]

members = [
    "crates/gemini",
    "crates/chatgpt",
    "crates/rust_parsing",
    "crates/patchdog",
    "crates/git_parsing"
, ]

[workspace.dependencies]
syn = { version = "2.0.104", features = ["full", "extra-traits"] }

dotenv = "0.15.0"
env = "1.0.1"
gemini-rust = "0.4.2"
openai-rust = "1.5.2"
quote = "1.0.40"
reqwest = "0.12.20"
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
gemini = { path = "crates/gemini" }
chatgpt = { path = "crates/chatgpt" }
snafu = "0.8.6"
