[workspace]
resolver = "2"
default-members = ["crates/patchdog"]

members = [
    "crates/gemini",
    "crates/rust_parsing",
    "crates/patchdog",
    "crates/git_parsing",
    "crates/ai_interactions" 
]

[workspace.dependencies]
dotenv = "0.15.0"
quote = "1.0.40"
serde = "1.0.219"
serde_json = "1.0.140"
snafu = "0.8.6"
clap = { version = "4.5.41", features = ["derive", "cargo"] }
regex = "1.11.1"
uuid = { version = "1.17.0", features = ["v4"] }
yaml-rust2 = "0.10.3"
tracing = "0.1.41"
rayon = "1.10.0"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
ra_ap_syntax = "0.0.300"
ra_ap_ide = "0.0.300"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = 1 }
as_conversions = "warn"
nursery = { level = "warn", priority = 1 }
unwrap_used = "deny"
expect_used = "deny"
print_stdout = "deny"
similar_names = { level = "allow", priority = 2 }
