[package]
name = "gemini"
version = "0.1.0"
edition = "2024"

[dependencies]
gemini-rust = "0.4.2"
async-trait = "0.1.54"
rust_parsing = { path = "../rust_parsing" }
snafu = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ai_interactions = { path = "../ai_interactions" }
tokio = { workspace = true }