[package]
name = "patchdog"
version = "0.1.28"
edition = "2024"

[dependencies]
rust_parsing = { path = "../rust_parsing" }
chatgpt = { path = "../chatgpt" }
gemini = { path = "../gemini" }
git_parsing = { path = "../git_parsing" }
ai_interactions = { path = "../ai_interactions"}
syn = { workspace = true }
dotenv = { workspace = true }
snafu = { workspace = true }
tracing = "0.1.41"
git2 = "0.20.2"
clap = { workspace = true }
serde = { workspace = true } 
serde_json = { workspace = true }
regex = { workspace = true }
uuid = { workspace = true }
tracing-subscriber = { version = "0.3.19", features = ["fmt"] }
rayon = { workspace = true }
tokio = { workspace = true }