[package]
name = "patchdog"
version = "1.2.63"
edition = "2024"

[dependencies]
rust_parsing = { path = "../rust_parsing" }
gemini = { path = "../gemini" }
git_parsing = { path = "../git_parsing" }
ai_interactions = { path = "../ai_interactions"}
dotenv = { workspace = true }
snafu = { workspace = true }
tracing = "0.1.41"
git2 = "0.20.2"
clap = { workspace = true }
serde = { workspace = true } 
serde_json = { workspace = true }
regex = { workspace = true }
uuid = { workspace = true }
tracing-subscriber = { version = "0.3.19", features = ["fmt"] }
rayon = { workspace = true }
tokio = { workspace = true }
opentelemetry = "0.30.0" 
opentelemetry-otlp = { version = "0.30.0", features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.30.0", features = [
    ] }
ra_ap_vfs = "0.0.300"
ra_ap_project_model = "0.0.300"
camino = "1.1.11"
rustc-hash = "2.1.1"
ra_ap_base_db = "0.0.300"
la-arena = "0.3.1"
ra_ap_syntax = { workspace = true }
ra_ap_hir = "0.0.300"
ra_ap_hir_def = "0.0.300"
ra_ap_hir_expand = "0.0.300"
proc-macro2 = { version = "1", features = ["span-locations"] }
salsa-macros = "0.23.0"
salsa = "0.23.0"
ra_ap_ide_db = "0.0.300"
tracing-opentelemetry = "0.31.0"
ra_ap_load-cargo = "0.0.300"
ra_ap_ide = { workspace = true }
ra_ap_span = "0.0.300"
