[package]
name = "rust_parsing"
version = "0.1.0"
edition = "2024"

[dependencies]
proc-macro2 = { version = "1", features = ["span-locations"] }
quote = { workspace = true }
serde = { workspace = true }
dotenv = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
git_parsing = { path = "../git_parsing" }
rustc_lexer = "0.1.0"
gemini-rust = "0.4.2"
regex = { workspace = true }
uuid = { workspace = true }
yaml-rust2 = { workspace = true }
tracing = { workspace = true }
anyhow = "1.0.99"
ra_ap_syntax = { workspace = true }
ra_ap_ide = { workspace = true }
rayon = { workspace = true }